--- a/Courseline/res/layout/deccan_courseline_activity_submission.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_submission.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".HomeActivity" >
+    tools:context=".SubmissionActivity" >
 
     <ImageView
         android:id="@+id/imageView1"
@@ -18,24 +18,12 @@
         android:src="@drawable/courseline_logo" />
 
     <Button
-        android:id="@+id/button2"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/button1"
-        android:layout_alignBottom="@+id/button1"
-        android:layout_alignRight="@+id/imageView1"
-        android:text="@string/delete_c" />
-
-    <Button
         android:id="@+id/button1"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
+        android:layout_width="420dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView1"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="33dp"
-        android:layout_marginLeft="16dp"
-        android:text="@string/add_c" />
+        android:layout_alignRight="@+id/imageView1"
+        android:layout_marginBottom="46dp"
+        android:text="@string/add_note" />
 
 </RelativeLayout>
