--- a/Courseline/res/layout/deccan_courseline_activity_chart.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_chart.xml
@@ -12,6 +12,7 @@
         android:id="@+id/chartLayout"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:orientation="vertical"
         android:paddingTop="0dp"
         android:paddingLeft="0dp"
         android:paddingRight="0dp"
