--- a/Courseline/res/layout/deccan_courseline_activity_deletion.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_deletion.xml
@@ -17,13 +17,28 @@
         android:contentDescription="@string/logo_desc"
         android:src="@drawable/courseline_logo" />
 
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="420dp"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/imageView1"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="27dp"
-        android:text="@string/delete_c" />
+      <TextView
+          android:id="@+id/delete_Text"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@+id/imageView1"
+          android:layout_below="@+id/imageView1"
+          android:layout_marginTop="40dp"
+          android:text="@string/delete_head"
+          android:textAppearance="?android:attr/textAppearanceMedium" />
+      
+      
+      
+      
+
+      <Button
+          android:id="@+id/button1"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_alignLeft="@+id/delete_Text"
+          android:layout_alignParentBottom="true"
+          android:layout_alignRight="@+id/imageView1"
+          android:layout_marginBottom="18dp"
+          android:text="@string/delete_c" />
 
 </RelativeLayout>
