--- a/Courseline/res/layout/deccan_courseline_activity_register.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_register.xml
@@ -18,71 +18,52 @@
         android:src="@drawable/courseline_logo" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/firstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText1"
-        android:layout_centerHorizontal="true"
-        android:ems="10"
-        android:hint="@string/l_name"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/editText1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText2"
         android:layout_below="@+id/imageView1"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="@string/f_name"
         android:inputType="textPersonName" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/signupEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_below="@+id/editText2"
+        android:layout_below="@+id/firstName"
+        android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="@string/email_address"
         android:inputType="textEmailAddress" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/signupPwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText3"
+        android:layout_below="@+id/signupEmail"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="@string/pwd"
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/editText5"
+        android:id="@+id/signupRePwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText4"
-        android:layout_below="@+id/editText4"
+        android:layout_alignLeft="@+id/signupPwd"
+        android:layout_below="@+id/signupPwd"
         android:ems="10"
         android:hint="@string/re_pwd"
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/signupButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/button1"
-        android:layout_alignRight="@+id/editText3"
-        android:layout_below="@+id/button1"
+        android:layout_alignLeft="@+id/signupPwd"
+        android:layout_alignRight="@+id/signupPwd"
+        android:layout_below="@+id/signupRePwd"
         android:text="@string/sign_up" />
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/editText3"
-        android:layout_below="@+id/editText5"
-        android:layout_marginTop="16dp"
-        android:text="@string/u_pic" />
 
 </RelativeLayout>
