add delete course working

--- a/Courseline/res/layout/deccan_courseline_activity_home.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_home.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    tools:context=".HomeActivity" >
+    tools:context=".HomeActivity"
+    android:configChanges="orientation"
+    android:screenOrientation="portrait" >
 
     <Button
         android:id="@+id/delete"
