--- a/Courseline/res/layout/deccan_courseline_activity_addition.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_addition.xml
@@ -17,22 +17,14 @@
         android:contentDescription="@string/logo_desc"
         android:src="@drawable/courseline_logo" />
 
-    <CheckBox
-        android:id="@+id/checkBox1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/imageView1"
-        android:layout_below="@+id/imageView1"
-        android:layout_marginRight="14dp"
-        android:layout_marginTop="56dp" />
-
     <TableLayout
         android:id="@+id/resultsTable"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/searchText"
-        android:layout_below="@+id/checkBox1"
-        android:layout_marginLeft="42dp" >
+        android:layout_below="@+id/searchText"
+        android:paddingLeft="100dp"
+        >
+
     </TableLayout>
 
     <ImageButton
