--- a/Courseline/res/layout/deccan_courseline_activity_deletion.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_deletion.xml
@@ -6,7 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".DeletionActivity" >
+    tools:context=".DeletionActivity"
+    android:configChanges="orientation"
+    android:screenOrientation="portrait" >
     
       <ImageView
         android:id="@+id/imageView1"
@@ -26,19 +28,16 @@
           android:layout_marginTop="40dp"
           android:text="@string/delete_head"
           android:textAppearance="?android:attr/textAppearanceMedium" />
-      
-      
-      
-      
 
-      <Button
-          android:id="@+id/button1"
+      <TableLayout
+          android:id="@+id/deleteTable"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignLeft="@+id/delete_Text"
-          android:layout_alignParentBottom="true"
-          android:layout_alignRight="@+id/imageView1"
-          android:layout_marginBottom="18dp"
-          android:text="@string/delete_c" />
+          android:layout_below="@+id/delete_Text"
+          android:paddingLeft="100dp"
+          android:layout_marginTop="86dp" >
+
+      </TableLayout>
 
 </RelativeLayout>
