--- a/Courseline/res/layout/deccan_courseline_activity_main.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_main.xml
@@ -6,7 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:configChanges="orientation"
+    android:screenOrientation="portrait" >
 
     <TextView
         android:id="@+id/textView1"
