--- a/Courseline/res/layout/deccan_courseline_activity_register.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_register.xml
@@ -6,7 +6,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".RegisterActivity" >
+    tools:context=".RegisterActivity"
+    android:configChanges="orientation"
+    android:screenOrientation="portrait" >
 
     <ImageView
         android:id="@+id/imageView1"
