--- a/Courseline/res/layout/deccan_courseline_activity_addition.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_addition.xml
@@ -7,42 +7,40 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".AdditionActivity" >
-    
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="@string/logo_desc"
-        android:src="@drawable/courseline_logo" />
+
+    <TableLayout
+        android:id="@+id/search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+
+        <TableRow>
+	
+            <EditText
+                android:id="@+id/searchText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="39dp"
+                android:textSize="25sp"
+                android:hint="@string/search_hint" />
+
+            <Button
+                android:id="@+id/searchButton"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/blue_menu_btn"
+                android:text="@string/search"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+        </TableRow>
+    </TableLayout>
 
     <TableLayout
         android:id="@+id/resultsTable"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/searchText"
-        android:paddingLeft="100dp"
-        >
-
+        android:layout_below="@+id/search"
+        android:paddingLeft="10dp" >
     </TableLayout>
-
-    <ImageButton
-        android:id="@+id/searchButton"
-        android:contentDescription="@string/desc"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/imageView1"
-        android:layout_below="@+id/imageView1"
-        android:src="@drawable/search" />
-
-    <EditText
-        android:id="@+id/searchText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/searchButton"
-        android:layout_toLeftOf="@+id/searchButton"
-        android:ems="10"
-        android:hint="@string/search_hint" />
 
 </RelativeLayout>
