--- a/Courseline/res/layout/deccan_courseline_activity_register.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_register.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -17,13 +18,14 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/logo_desc"
-        android:src="@drawable/courseline_logo" />
+        android:src="@drawable/cline_logo" />
 
     <EditText
         android:id="@+id/firstName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
+        android:paddingTop="100dp"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="@string/f_name"
@@ -34,6 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/firstName"
+        android:paddingTop="10dp"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="@string/email_address"
@@ -44,6 +47,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/signupEmail"
+        android:paddingTop="15dp"
         android:layout_centerHorizontal="true"
         android:ems="10"
         android:hint="@string/pwd"
@@ -55,6 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/signupPwd"
         android:layout_below="@+id/signupPwd"
+        android:paddingTop="10dp"
         android:ems="10"
         android:hint="@string/re_pwd"
         android:inputType="textPassword" />
@@ -66,6 +71,10 @@
         android:layout_alignLeft="@+id/signupPwd"
         android:layout_alignRight="@+id/signupPwd"
         android:layout_below="@+id/signupRePwd"
-        android:text="@string/sign_up" />
+        android:background="@drawable/blue_menu_btn"
+        android:text="@string/sign_up"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/white"
+        android:textStyle="bold" />
 
 </RelativeLayout>
