--- a/Courseline/res/layout/deccan_courseline_activity_submission.xml
+++ b/Courseline/res/layout/deccan_courseline_activity_submission.xml
@@ -2,47 +2,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:configChanges="orientation"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".SubmissionActivity"
-    android:configChanges="orientation"
-    android:screenOrientation="portrait" >
+    android:screenOrientation="portrait"
+    tools:context=".SubmissionActivity" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="@string/logo_desc"
-        android:src="@drawable/courseline_logo" />
-
-    <TextView
-          android:id="@+id/sub_head"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_alignLeft="@+id/imageView1"
-          android:layout_below="@+id/imageView1"
-          android:layout_marginTop="40dp"
-          android:text="@string/sub_head"
-          android:textAppearance="?android:attr/textAppearanceMedium" />
-    
-    <TableLayout
-          android:id="@+id/subTable"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_below="@+id/sub_head"
-          android:paddingLeft="10dp"
-          android:layout_marginTop="50dp" >
-      </TableLayout>
-      
-    <ListView
-        android:id="@+id/list"
+    <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="0dp"
-        android:cacheColorHint="#00000000" >
-    </ListView>
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:scrollbars="none" >
+
+        <TableLayout
+            android:id="@+id/subTable"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="10dp"
+            android:paddingLeft="10dp" >
+        </TableLayout>
+    </ScrollView>
 
 </RelativeLayout>
