--- a/Courseline/res/layout/deccan_courseline_notes.xml
+++ b/Courseline/res/layout/deccan_courseline_notes.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@+id/imgIcon"
         android:layout_width="200dp"
-        android:layout_height="0dip"
+        android:layout_height="200dp"
         android:layout_weight="0.71"
         android:contentDescription="@string/desc"
         android:gravity="center_vertical" />
@@ -17,7 +17,7 @@
         android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:textSize="14sp"
+        android:textSize="14dp"
         android:text="@string/img"
         android:textColor="#ffffff"
         android:layout_marginLeft="7dp" />    
